# threaded-wasm-template

./: bun.lockb  package.json  vite.config.ts
src/: App.tsx
wasm/: Cargo.toml
wasm/executor/: worker.js
wasm/src/: lib.rs
