[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
js-sys = "0.3.69"
log = "0.4.22"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-futures-executor = { path = "./executor" }


[profile.release]
opt-level = 3
lto = "fat"
